@@ -15,6 +15,8 @@ bzr-0.0.4  NOT RELEASED YET
 
     * Make commit safe for hardlinked bzr trees.
 
+    * Some Unicode/locale fixes.
+
 
   INTERNAL:
 
